versions/26.1.2/translated/uk_ua/develop/entities/first-entity.md
---
title: Створення вашої першої сутності
description: Дізнайтеся, як зареєструвати просту сутність, як дати їй цілей, рендер, модель та анімувати її.
authors:
  - cassiancc
  - Earthcomputer
  - JaaiDead
  - skycatminepokie
  - SzczurekYT
resources:
  https://docs.neoforged.net/docs/entities/: Сутності — Документація NeoForge
  https://www.desmos.com/calculator/9r6lh5knfu: Анімація ходьби сутності — Desmos
---

Сутності — це динамічні та інтерактивні об'єкти в грі, які не є частиною ландшафту (як-от блоки). Сутності можуть рухатися та взаємодіяти зі світом різними способами. Ось кілька прикладів:

- `Villager`, `Pig` і `Goat` — це все приклади `Mob`, найпоширенішого типу сутностей — живих істот.
- `Zombie` та `Skeleton` — це приклади `Monster`, різновиду `Entity`, який є ворожим до `Player`.
- `Minecart` і `Boat` — це приклади `VehicleEntity`, який має спеціальну логіку обробки введення гравця.

Ця стаття проведе вас через процес створення власного _мініґолема_. Ця сутність матиме кумедні анімації. Вона буде `PathfinderMob`, який є класом, що використовується більшістю мобів із функцією пошуку шляху, як-от `Zombie` та `Villager`.

## Підготовка вашої першої сутності {#preparing-your-first-entity}

Першим кроком у створенні власної сутності є визначення її класу та реєстрація її в грі.

Ми створимо клас `MiniGolemEntity` для нашої сутності й почнемо з надання йому атрибутів. [Атрибути](attributes) вирішують різні речі, зокрема максимальне здоров'я, швидкість руху та дальність спокуси сутності.

@[code transcludeWith=:::registerclass](@/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java)

Щоби зареєструвати свою сутність, рекомендується створити окремий клас `ModEntityTypes`, у якому ви будете реєструвати будь-які типи сутностей, установлювати їхні розміри та реєструвати їхні атрибути.

@[code transcludeWith=:::types](@/reference/26.1.2/src/main/java/com/example/docs/entity/ModEntityTypes.java)

## Додавання цілей {#adding-goals}

Цілі — це система обробки того, що буде прагнути сутність, надаючи їй визначений набір поведінок. Цілі мають певний пріоритет: мети з нижчим значенням пріоритету мають перевагу над метами з вищим значенням пріоритету.

Щоб додати цілей до сутності, вам потрібно створити в класі своєї сутності метод `registerGoals`, який визначає цілі для неї.

@[code transcludeWith=:::goals](@/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java)

::: info

1. `TemptGoal` — сутність приваблюється до гравця, який тримає предмет.
2. `RandomStrollGoal` — блукає світом.
3. `LookAtPlayerGoal` — попри назву, вона приймає будь-яку сутність. Використовується тут, щоб дивитися на сутність `Cow`.
4. `RandomLookAroundGoal` — щоб дивитися у випадкові напрямки.

:::

## Створення рендера {#creating-rendering}

Рендер стосується процесу конвертування даних гри, як-от блоки, сутності чи середовища у візуальні зображення, показані на екрані гравця. Це передбачає визначення того, як об'єкти освітлюються, затінюються та текстуруються.

::: info

Рендер сутностей завжди обробляються на стороні клієнта. Сервер керує логікою та поведінкою сутності, а клієнт відповідає за показ моделі, текстури та анімацій сутності.

:::

Рендер має декілька кроків, що стосується їх власних класів, але ми почнемо з класу `EntityRenderState`.

@[code transcludeWith=:::entitystate](@/reference/26.1.2/src/client/java/com/example/docs/entity/state/MiniGolemEntityRenderState.java)

Дані, що зберігаються в стані рендера, використовуються для визначення того, як сутність представляється візуально, включаючи стани анімації, як-от поведінка руху чи бездіяльності.

### Налаштування моделі {#setting-up-model}

Клас `MiniGolemEntityModel` визначає, як ваша сутність виглядає, описуючи її форму та частини. Моделі зазвичай створюються у сторонніх інструментах, як-от [BlockBench](https://www.blockbench.net/), а не вручну. Проте ця стаття проведе вас через приклад ручного створення, щоб показати, як це працює.

::: warning

BlockBench підтримує кілька [мапінгів](../migrating-mappings/#mappings) (як-от мапінги Mojang, Yarn та інші). Переконайтеся, що ви обрали правильні мапінги, які відповідають вашому середовищу розробки — ця стаття використовує мапінги Mojang.

Невідповідні мапінги можуть спричинити помилки під час інтеграції коду, згенерованого BlockBench.

:::

@[code transcludeWith=:::model1](@/reference/26.1.2/src/client/java/com/example/docs/entity/model/MiniGolemEntityModel.java)

Клас `MiniGolemEntityModel` визначає візуальну модель для сутності мініґолема. Він розширює `EntityModel`, вказуючи, як називаються частини тіла сутності (тіло, голова, ліва та права нога).

@[code transcludeWith=:::model_texture_data](@/reference/26.1.2/src/client/java/com/example/docs/entity/model/MiniGolemEntityModel.java)

Цей метод визначає 3D модель мініґолема, створюючи його тіло, голову та ноги як куби, встановлює їх позицію та мапінги текстури та повертає `LayerDefinition` для рендера.

Кожна частина додається разом з точкою зміщення, яка є початком координат для всіх перетворень, що застосовуються до цієї частини. Усі інші координати в частині моделі вимірюються відносно цієї точки зміщення.

::: warning

Вищі значення Y у моделі відповідають **низу** сутності. Це навпаки у порівнянні з ігровими координатами.

:::

Тепер нам потрібно буде створити клас `ModEntityModelLayers` у клієнтському пакеті. Ця сутність має лише один шар текстури, але інші сутності можуть використовувати декілька – подумайте про вторинний шар скіну на сутностях, таких як `Player` або очі `Spider`.

@[code transcludeWith=:::model_layer](@/reference/26.1.2/src/client/java/com/example/docs/entity/model/ModEntityModelLayers.java)

Потім цей клас потрібно ініціалізувати в ініціалізаторі клієнта мода.

@[code transcludeWith=::register_client](@/reference/26.1.2/src/client/java/com/example/docs/entity/ExampleModCustomEntityClient.java)

### Налаштування текстури {#setting-up-texture}

::: tip

Розмір текстури має відповідати значенням у `LayerDefinition.create(modelData, 64, 32)`: 64 пікселі в ширину та 32 пікселі у висоту. Якщо вам потрібна текстура іншого розміру, не забудьте змінити розмір у `LayerDefinition.create`, щоб він відповідав.

:::

Кожна деталь/куб моделі очікує сітки на текстурі в певному місці. Усталено він очікує значення `0, 0` (верхній лівий кут), але це можна змінити, викликавши функцію `texOffs` у `CubeListBuilder`.

Для прикладу ви можете використовувати цю текстуру для `assets/example-mod/textures/entity/mini_golem.png`

<DownloadEntry visualURL="/assets/develop/entity/mini_golem.png" downloadURL="/assets/develop/entity/mini_golem_small.png">Текстура</DownloadEntry>

### Створення рендера {#creating-the-renderer}

Рендер сутності дає змогу бачити її в грі. Ми створимо новий клас, `MiniGolemEntityRenderer`, який повідомить Minecraft, яку текстуру, модель і стан рендера сутності використовувати для цієї сутності.

@[code transcludeWith=:::renderer](@/reference/26.1.2/src/client/java/com/example/docs/entity/renderer/MiniGolemEntityRenderer.java)

Тут також установлюється радіус тіні, для цієї сутності буде `0,375f`.

Потім цей рендер потрібно зареєструвати в ініціалізаторі клієнта мода.

@[code transcludeWith=::register_renderer](@/reference/26.1.2/src/client/java/com/example/docs/entity/ExampleModCustomEntityClient.java)

### Додавання анімації ходьби {#walking-animations}

Наведений нижче код можна додати до класу `MiniGolemEntityModel`, щоб надати сутності анімацію ходьби.

@[code transcludeWith=:::model_animation](@/reference/26.1.2/src/client/java/com/example/docs/entity/model/MiniGolemEntityModel.java)

Для початку застосуйте поворот і нахил до частини моделі голови.

Потім ми застосовуємо анімацію ходьби до частин моделі ніг. Ми використовуємо функцію `cos`, щоб створити загальний ефект хитання ногою, а потім трансформуємо косинусну хвилю, щоб отримати правильну швидкість і амплітуду хитання.

- Константа `0,2` у формулі контролює частоту косинусної хвилі (наскільки швидко гойдаються ноги). Вищі значення призводять до вищої частоти.
- Константа `1,4` у формулі контролює амплітуду косинусної хвилі (наскільки далеко гойдаються ноги). Вищі значення призводять до вищої амплітуди.
- Змінна `limbSwingAmplitude` також впливає на амплітуду так само, як константа `1.4`. Ця змінна змінюється залежно від швидкості сутності, так що ноги розгойдуються більше, коли сутність рухається швидше, і коливаються менше або зовсім не коливаються, коли сутність рухається повільніше або не рухається.
- Константа `Mth.PI` для лівої ноги перетворює косинусну хвилю на половину фази так, що ліва нога коливається в протилежному напрямку до правої ноги.

Ви можете нанести їх на графік, щоб побачити, як вони виглядають:

![Графік](/assets/develop/entity/graphs/dark_graph.png){.dark-only}
![Графік](/assets/develop/entity/graphs/light_graph.png){.light-only}

Синя крива — для лівої ноги, а коричнева — для правої. Горизонтальна вісь X представляє час, а вісь Y вказує кут кінцівок ніг.

Не соромтеся [пограти з константами на Desmos](https://www.desmos.com/calculator/9r6lh5knfu), щоб побачити, як вони впливають на криву.

Заглянувши в гру, тепер у вас є все, що вам потрібно, щоб створити сутність за допомогою `/summon example-mod:mini_golem`!

![Виклик ґолема](/assets/develop/entity/mini_golem_summoned.png)

## Додавання даних до сутності {#adding-data-to-an-entity}

Щоб зберегти дані в сутності, звичайним способом є просто додати поле в клас сутності.

Іноді вам потрібно синхронізувати дані сутності між стороною сервера та клієнта. Перегляньте [сторінку мережі](../networking), щоб дізнатися більше про архітектуру клієнт-сервер. Для цього ми можемо використати _синхронізовані дані_ \[sic], визначивши для нього `EntityDataAccessor`.

У нашому випадку ми хочемо, щоб наша сутність танцювала час від часу, тому нам потрібно створити стан танцю, який синхронізується між клієнтами, щоб його можна було анімувати пізніше. Однак час відновлення танцю не потрібно синхронізувати з клієнтом, оскільки анімацію запускає сервер.

@[code transcludeWith=:::datatracker](@/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java)

Як бачите, ми додали метод такту для контролю стану танцю.

## Зберігання даних у NBT {#storing-data-to-nbt}

Для постійних даних, які можна зберегти після закриття гри, ми замінимо методи `addAdditionalSaveData` і `readAdditionalSaveData` в `MiniGolemEntity`. Ми можемо використовувати це, щоб зберегти кількість часу, що залишився в танцювальній анімації.

@[code transcludeWith=:::savedata](@/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java)

Тепер, коли сутність завантажується, вона відновлюватиме стан, у якому була залишена.

## Додавання анімації {#adding-an-animation}

Першим кроком до додавання анімації до сутності є додавання стану анімації в клас сутності. Ми створимо стан анімації, який використовуватиметься, щоб змусити сутність танцювати.

@[code transcludeWith=:::dancing_animation](@/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java)

Ми перевизначили метод `onSyncedDataUpdated`. Це викликається щоразу, коли синхронізовані дані оновлюються як на сервері, так і на клієнті. Інструкція if перевіряє, чи синхронізовані дані, які було оновлено, є танцювальними синхронізованими даними.

Тепер ми перейдемо до самої анімації. Ми створимо клас `MiniGolemAnimations` і додамо `AnimationDefinition`, щоб визначити, як анімація буде застосована до сутності.

@[code transcludeWith=:::dancing_animation](@/reference/26.1.2/src/client/java/com/example/docs/entity/animation/MiniGolemAnimations.java)

Тут багато чого відбувається, зверніть увагу на такі ключові моменти:

- `withLength(1)` робить анімацію тривалістю в 1 секунду.
- `looping()` повторює цикл анімації.
- Потім слідує серія викликів `addAnimation`, що додає окремі анімації, спрямовані на окремі частини моделі. Тут ми маємо різні анімації, націлені на голову, ліву та праву ногу.
  - Кожна анімація націлена на певну властивість цієї частини моделі, у нашому випадку ми змінюємо обертання частини моделі в кожному випадку.
  - Анімація складається зі списку ключових кадрів. Коли час (кількість секунд, що минули) анімації дорівнює одному з цих ключових кадрів, тоді значення цільової властивості дорівнюватиме значенню, яке ми вказали для цього ключового кадру (у нашому випадку обертання).
  - Коли час знаходиться між нашими ключовими кадрами, тоді значення буде інтерпольовано (змішано) між двома сусідніми ключовими кадрами.
  - Ми використали лінійну інтерполяцію, яка є найпростішою та змінює значення (у нашому випадку обертання частини моделі) з постійною швидкістю від одного ключового кадру до іншого. Стандартна гра також забезпечує сплайн-інтерполяцію Catmull-Rom, яка забезпечує більш плавний перехід між ключовими кадрами.
  - Творці модів також можуть створювати власні типи інтерполяції.

Нарешті, приєднаймо анімацію до моделі:

@[code transcludeWith=:::dancing_animation](@/reference/26.1.2/src/client/java/com/example/docs/entity/model/MiniGolemEntityModel.java)

Під час відтворення анімації ми застосовуємо анімацію, інакше використовуємо старий код анімації ніг.

## Додавання яйця виклику {#adding-spawn-egg}

Щоб додати яйце виклику для сутності мініґолема, дивіться повну статтю про [створення яйця виклику](../items/spawn-egg).
